# AWESOME_DJANGO_PET

./: .coveragerc  .dockerignore  .env-example  .flake8  .gitignore  Makefile  docker-compose.yml  pyproject.toml
.github/workflows/: check-branch-names.yml  testing-with-poetry.yml
auto_app/: Dockerfile
auto_app/auth/: urls.py
auto_app/settings/: celery.py  celery_app.py  settings.py  urls.py
auto_app/tasks/: __init__.py
auto_app/tasks/not_regular/: __init__.py  not_regular_task.py
auto_app/tasks/regular/: __init__.py  regular_task.py
documentation/: mkdocs.yml
documentation/docs/: index.md  storages.md  used_ports.md
